tests/snapshots/examples_fixtures/optimizations__constant_fold_demo.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/optimizations/constant_fold_demo.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `print`.

  examples/optimizations/constant_fold_demo.flx:38:5
   |
38 |     print("a =", a);
   |     ^^^^^

Hint:
  Define it first: let print = ...;


error[E004]: Undefined Variable

I can't find a value named `print`.

  examples/optimizations/constant_fold_demo.flx:39:5
   |
39 |     print("greeting =", greeting);
   |     ^^^^^

Hint:
  Define it first: let print = ...;


error[E004]: Undefined Variable

I can't find a value named `print`.

  examples/optimizations/constant_fold_demo.flx:40:5
   |
40 |     print("complex =", complex);
   |     ^^^^^

Hint:
  Define it first: let print = ...;

Found 3 errors.
== stdout ==
<not executed>
